--- a/website/wp-content/themes/Cairo-Jazz-Club/sass/override/_website.scss
+++ b/website/wp-content/themes/Cairo-Jazz-Club/sass/override/_website.scss
@@ -14,6 +14,16 @@
 	}
 }
 
+@media screen and (max-width: 600px) {
+	.admin-bar #masthead {
+		top: 0px;
+	}
+	#wpadminbar {
+		top: -44px;
+		z-index: 999;
+	}
+}
+
 #masthead {
 	z-index: 1000;
 }
@@ -35,10 +45,4 @@
 	height: 100%;
 	float: left;
 	background-size: cover;
-}
-
-@media screen and (max-width: 768px) {
-  .parallax__content {
-    background-image: none;
-  }
 }
